# computer-graphics-lab-2

./: .gitmodules  CMakeLists.txt  image.lab  shrek.lab
libs/: CMakeLists.txt
src/: image.cpp  image.h  main.cpp
